// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse Arguments handles alias for keep-git 1`] = `
Object {
  "_": Array [
    "cmd",
  ],
  "install": true,
  "k": true,
  "keep-git": true,
}
`;

exports[`Parse Arguments handles all flags 1`] = `
Object {
  "_": Array [
    "c",
    "m",
    "d",
  ],
  "checkout": "dev",
  "depth": 3,
  "git": "/bin/git",
  "install": true,
  "k": true,
  "keep-git": true,
}
`;

exports[`Parse Arguments handles empty list without fail 1`] = `
Object {
  "_": Array [],
  "install": true,
  "k": false,
  "keep-git": false,
}
`;

exports[`Parse Arguments handles no-install flag 1`] = `
Object {
  "_": Array [
    "cmd",
  ],
  "install": false,
  "k": false,
  "keep-git": false,
}
`;
